--- a/itviec/src/app/globals.css
+++ b/itviec/src/app/globals.css
@@ -31,3 +31,24 @@ body {
     text-wrap: balance;
   }
 } */
+
+
+/* animaion */
+/* Skeleton loader styles */
+@keyframes pulse {
+  0% {
+    background-color: #e0e0e0;
+  }
+  50% {
+    background-color: #f0f0f0;
+  }
+  100% {
+    background-color: #e0e0e0;
+  }
+}
+
+.skeleton {
+  background: #e0e0e0;
+  border-radius: 0.375rem; /* Use Tailwind's rounded-md equivalent */
+  animation: pulse 1.5s infinite ease-in-out;
+}
