--- a/itviec/src/app/globals.css
+++ b/itviec/src/app/globals.css
@@ -32,23 +32,49 @@ body {
   }
 } */
 
-
 /* animaion */
 /* Skeleton loader styles */
 @keyframes pulse {
-  0% {
-    background-color: #e0e0e0;
-  }
-  50% {
-    background-color: #f0f0f0;
-  }
-  100% {
-    background-color: #e0e0e0;
-  }
+	0% {
+		background-color: #e0e0e0;
+	}
+	50% {
+		background-color: #f0f0f0;
+	}
+	100% {
+		background-color: #e0e0e0;
+	}
 }
 
 .skeleton {
-  background: #e0e0e0;
-  border-radius: 0.375rem; /* Use Tailwind's rounded-md equivalent */
-  animation: pulse 1.5s infinite ease-in-out;
+	background: #e0e0e0;
+	border-radius: 0.375rem; /* Use Tailwind's rounded-md equivalent */
+	animation: pulse 1.5s infinite ease-in-out;
+}
+
+.swiper {
+	width: 100%; /* Đảm bảo Swiper chiếm toàn bộ chiều rộng */
+	height: auto; /* Đảm bảo chiều cao tự động */
+}
+
+.swiper-slide {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: auto;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+	color: #000;
+	padding: 10px;
+	border-radius: 50%;
+}
+
+.swiper-button-next {
+	right: 10px;
+}
+
+.swiper-button-prev {
+	left: 10px;
 }
