--- a/itviec/src/app/(adminpage)/admin/style.css
+++ b/itviec/src/app/(adminpage)/admin/style.css
@@ -12,3 +12,7 @@ background-color: #00b14f
     background-color: #00b14f; 
     color: white;  
   }
+
+.ant-btn.ant-btn-primary {
+    background-color: #00b14f;
+  }
