--- a/itviec/src/app/(adminpage)/admin/style.css
+++ b/itviec/src/app/(adminpage)/admin/style.css
@@ -16,3 +16,17 @@ background-color: #00b14f
 .ant-btn.ant-btn-primary {
     background-color: #00b14f;
   }
+
+.ant-layout-sider-children {
+  position: fixed;
+  width: 53%;
+  top: 0;
+  left: 0px;
+  bottom: 0;
+  width: inherit;
+}
+
+.ant-table-thead {
+  background-color: #00b14f;
+}
+
