--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
 /* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -78,3 +85,26 @@ body {
 .swiper-button-prev {
 	left: 10px;
 }
+
+
+.search-bar {
+	position: sticky;
+  z-index: 111;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+
+
+
+
+
+
+
+
+.ant-select-focused .ant-select-selector {
+	border-color: transparent !important; /* Bỏ màu border */
+	box-shadow: none !important; /* Bỏ hiệu ứng box-shadow */
+	outline: none !important; /* Bỏ outline */
+  }
