up some send email by chage status

--- a/server/src/modules/mail/templates/applied.hbs
+++ b/server/src/modules/mail/templates/applied.hbs
@@ -11,8 +11,8 @@
         <div class="content" style="padding: 20px;">
             <h2 style="text-align: center;font-size: 24px;color: #333;margin-bottom: 20px;">Ứng tuyển thành công</h2>
             <p class="greeting" style="margin-left: 20px;font-size: 16px;color: #555;">
-                Xin chào <strong>Khoa Nguyễn Văn</strong>,</p> <!-- Tên được thụt vào -->
-            <p>Hồ sơ của bạn đã được gửi thành công tới các nhà tuyển dụng cho các vị trí sau:</p>
+                Xin chào <strong>{{name}}</strong>,</p> <!-- Tên được thụt vào -->
+            <p>{{message}}</p>
 
             <div class="job-list" style="margin: 20px 0;">
                 <div class="job-item"
